<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_small"
    android:background="@drawable/custom_item_diary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/listtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_big"
        android:textColor="?attr/colorTitle"
        android:text="@string/title"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/listcontent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content"
        android:textColor="?attr/colorBlur"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/listdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorText"
        android:text="@string/date"
        android:singleLine="true"/>

</LinearLayout>