<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/tab_height"
        tools:context=".activity.SettingActivity">

        <TextView
            android:id="@+id/tvDisplay"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_bigger"
            android:paddingLeft="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_standard"
            android:gravity="center_vertical"
            android:text="@string/display"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_big"/>

        <TextView
            android:id="@+id/tvLanguage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_bigger"
            android:paddingLeft="@dimen/margin_large"
            android:gravity="center_vertical"
            android:background="@color/item_settings"
            android:text="@string/language"
            android:textSize="@dimen/text_size_standard"/>

        <TextView
            android:id="@+id/tvTheme"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_bigger"
            android:paddingLeft="@dimen/margin_large"
            android:gravity="center_vertical"
            android:background="@color/item_settings"
            android:text="@string/theme"
            android:textSize="@dimen/text_size_standard"/>
    </LinearLayout>
</FrameLayout>

