<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ContentDescription"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="70dp"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@color/addnew_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/add"
            android:layout_marginEnd="30dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/addnew_background"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/add" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <!--            <LinearLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="45dp"-->
            <!--                android:orientation="horizontal">-->

            <!--                <EditText-->
            <!--                    android:id="@+id/searchBar"-->
            <!--                    android:layout_width="0dp"-->
            <!--                    android:layout_height="match_parent"-->
            <!--                    android:layout_weight="9"-->
            <!--                    android:background="@drawable/custom_searchbox"-->
            <!--                    android:hint="@string/search"-->
            <!--                    android:drawableLeft="@drawable/search"-->
            <!--                    android:drawablePadding="3dp"-->
            <!--                    android:inputType="textMultiLine"-->
            <!--                    android:padding="@dimen/drawable_padding"-->
            <!--                    android:importantForAutofill="no"-->
            <!--                    tools:ignore="RtlHardcoded,RtlSymmetry" />-->
            <!--                <ImageView-->
            <!--                    android:id="@+id/searchCancel"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_marginLeft="@dimen/drawable_padding"-->
            <!--                    android:layout_gravity="center_vertical"-->
            <!--                    app:srcCompat="@drawable/cancel"/>-->
            <!--            </LinearLayout>-->

            <SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:queryHint="@string/search"
                android:background="@drawable/custom_searchbox"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <GridView
                    android:id="@+id/gridViewDiary"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:horizontalSpacing="5dp"
                    android:numColumns="1"
                    android:verticalSpacing="15dp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/background_light"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:foregroundGravity="center">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="40dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/appname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/app_name"
                    android:textColor="#0700CC"
                    android:textSize="22sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/about"
                style="@style/DrawerLayout">

                <ImageButton
                    style="@style/DrawerLayoutImage"
                    app:srcCompat="@drawable/infor" />

                <TextView
                    style="@style/DrawerLayoutText"
                    android:text="@string/about" />
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>